2009-03-30 Daniel Zielinski <d.zielinski@l10ntech.de>
	* CLI import file XML or ZIP (local file) TODO: If http:// or ftp://...
	* Unzip file (not Win compatible)
	* Generate preview link via CLI if t3_previewId present takes precendemce over first pageGrp id
	* New calls for cli import script: modes 1 = import string, 2 = import file, 3 = source preview.
	* Example: cli.import.php MODE PREVIEW XML FILEPATH SERVERLINK
	* Preview param is now passed as additional argument
	* Revision 3.3.2

2009-02-03 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Bug fix in preview link generation service

2009-02-02 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added email notification to CLI export (with/without attachment)
	* Added dependency static_info_tables
	* Revision 3.3.0 now

2009-02-02 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Merged last changes from trunk into v3

2009-01-30 Kasper Skarhoj
	* Added "recUid" to sorting in translation task index list.

2009-01-30 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added settings file for MemoQ
	* Revision 3.2.2 now

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Revision 3.2.1 now
	* Removed naming annoyances

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Merged changes from Kasper from trunk to v3 ;-)

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added option to enable/disable FTP upload via extension configuration

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added option to hide/display hidden system languages via extension configuration 

2009-01-27 Kasper Skarhoj
	* Various modifications.

2009-01-24 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added options to CLI export script (only changed content, skip hidden, multiple target languages & l10ncfgs, FTP upload!)
	* Revision 3.1 now

2009-01-23 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added serverlink param to POST interface for back link generation
	* Modified CLI preview link generation (append serverlink)