@@ -20,7 +20,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'conflicts' => '',
 	'priority' => '',
 	'loadOrder' => '',
-	'module' => 'export,import,cm1,cm2,cm3,mod1,mod2',
+	'module' => 'translate,export,import,cm1,cm2,cm3,mod1,mod2',
 	'state' => 'beta',
 	'uploadfolder' => 1,
 	'createDirs' => 'uploads/tx_l10nmgr/settings,uploads/tx_l10nmgr/saved_files,uploads/tx_l10nmgr/jobs,uploads/tx_l10nmgr/jobs/out,uploads/tx_l10nmgr/jobs/in,uploads/tx_l10nmgr/jobs/done,uploads/tx_l10nmgr/jobs/_cmd',
