@@ -1,7 +1,7 @@
 <?php
 
 	// DO NOT REMOVE OR CHANGE THESE 3 LINES:
-define('TYPO3_MOD_PATH', '../typo3conf/ext/l10nmgr/cm1/');
+define('TYPO3_MOD_PATH', '../typo3conf/ext/l10nmgr/translate/');
 $BACK_PATH='../../../../typo3/';
-$MCONF['name']='xMOD_tx_l10nmgr_cm1';
+$MCONF['name']='xMOD_tx_l10nmgr_translate';
 ?>
